--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.mvc.view.suffix=.jsp
 # jdbc : java database connectivity
 # thin : 드라이버의 한 종류
 # xe : SID(Sequence ID : 유일한 아이디)
-spring.datasource.url=jdbc:oracle:thin:@localhost:1588/FREEPDB1
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
 spring.datasource.username=jspexam
 spring.datasource.password=java
 # 사용할 JDBC 드라이버 클래스 이름을 지정
